Pagina final merge nueva mas anterior

--- a/Acerca-de-mí.html
+++ b/Acerca-de-mí.html
@@ -54,9 +54,9 @@ Gracias por leerme">
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-custom-font u-nav u-spacing-30 u-text-font u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-border-3 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90" href="Terapeuta-cerca-de-mi.html" style="padding: 10px 0px;">Terapeuta cerca de mi</a>
-</li><li class="u-nav-item"><a class="u-border-3 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90" href="Terapia-de-pareja-near-me.html" style="padding: 10px 0px;">Terapia de pareja near me</a>
-</li><li class="u-nav-item"><a class="u-border-3 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90" href="Acerca-de-mí.html" style="padding: 10px 0px;">Más de la sexóloga</a>
+            <ul class="u-custom-font u-nav u-spacing-30 u-text-font u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-border-3 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90" href="Terapeuta-cerca-de-mi.html" style="padding: 10px 0px;">Terapia Online</a>
+</li><li class="u-nav-item"><a class="u-border-3 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90" href="Terapia-de-pareja-near-me.html" style="padding: 10px 0px;">Terapia individual y de pareja</a>
+</li><li class="u-nav-item"><a class="u-border-3 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90" href="Acerca-de-mí.html" style="padding: 10px 0px;">Acerca de mí</a>
 </li><li class="u-nav-item"><a class="u-border-3 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90" href="Contacto.html" style="padding: 10px 0px;">Contacto</a>
 </li></ul>
           </div>
@@ -64,9 +64,9 @@ Gracias por leerme">
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Terapeuta-cerca-de-mi.html">Terapeuta cerca de mi</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Terapia-de-pareja-near-me.html">Terapia de pareja near me</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Acerca-de-mí.html">Más de la sexóloga</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Terapeuta-cerca-de-mi.html">Terapia Online</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Terapia-de-pareja-near-me.html">Terapia individual y de pareja</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Acerca-de-mí.html">Acerca de mí</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contacto.html">Contacto</a>
 </li></ul>
               </div>
@@ -76,8 +76,8 @@ Gracias por leerme">
         </nav>
       </div></header>
     <section class="u-clearfix u-section-1" id="carousel_89fd">
-      <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
-        <div class="u-expanded-width-sm u-expanded-width-xs u-shape u-shape-svg u-text-custom-color-3 u-shape-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <div class="u-expanded-width-sm u-expanded-width-xs u-shape u-shape-svg u-text-custom-color-19 u-shape-1">
           <svg class="u-svg-link" preserveAspectRatio="none" viewBox="0 0 160 150" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1073"></use></svg>
           <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 160 150" x="0px" y="0px" id="svg-1073"><path d="M43.2,126.9c14.2,1.3,27.6,7,39.1,15.6c8.3,6.1,19.4,10.3,32.7,5.3c11.7-4.4,18.6-17.4,21-30.2c2.6-13.3,8.1-25.9,15.7-37.1
 	c8.3-12.1,10.8-27.9,5.3-42.7C150.5,20.3,134.6,9,117,7.6C107.9,6.9,98.8,5,90.1,1.9C83-0.6,75-0.7,67.4,2.1
@@ -85,18 +85,18 @@ Gracias por leerme">
 	C6.9,115.6,25.2,125.2,43.2,126.9z"></path></svg>
         </div>
         <div class="u-align-left u-image u-image-circle u-image-1" data-image-width="1023" data-image-height="767"></div>
-        <div class="u-palette-3-light-2 u-shape u-shape-circle u-shape-2"></div>
         <div class="u-align-left u-container-style u-expanded-width-xs u-group u-radius-30 u-shape-round u-white u-group-1">
           <div class="u-container-layout u-container-layout-1">
             <h2 class="u-custom-font u-font-pt-sans u-text u-text-1"> ¡Hola soy
 Karilyn, en este espacio quiero contarte un poco sobre mi!</h2>
           </div>
         </div>
+        <div class="u-palette-3-light-2 u-shape u-shape-circle u-shape-2"></div>
       </div>
     </section>
-    <section class="u-clearfix u-custom-color-3 u-section-2" id="sec-0c39">
+    <section class="u-clearfix u-custom-color-19 u-section-2" id="sec-0c39">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h2 class="u-align-center u-text u-text-default u-text-1"> Me encanta socializar y ayudar a las
+        <p class="u-align-justify u-text u-text-default-lg u-text-default-xl u-text-1"> Me encanta socializar y ayudar a las
 personas, en mi campo de la sexología y terapia de pareja, soy muy dedicada,
 cada paciente es un ser humano que pasa por un mal momento, mis consultas
 siempre son desde la empatía y me enfoco en dar lo mejor de mi desde el
@@ -108,13 +108,14 @@ creyente de respetar los ritmos de cada persona.<br>
 su sexualidad, el respeto y el conocimiento que debe existir en una pareja,
 sexualidad en el hogar, es sumamente importante en autoconocimiento como base
 de una persona saludable<br>
-          <br> Creadora de la jornada,<span style="font-weight: 700;"> La violencia no es solo física,</span> el enlace lo consigues aqui, https://www.instagram.com/p/CCw6fS8DohU/
-como medida de reconocer las alertas de violencia que no se ven , ni se sienten
+          <br> Creadora de la jornada,<span style="font-weight: 700;">
+            <a href="https://www.instagram.com/p/CCw6fS8DohU/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1">La violencia no es solo física</a>,
+          </span>&nbsp;como medida de reconocer las alertas de violencia que no se ven , ni se sienten
 , pero que si existen.<br>
           <br> Espero te sirva mi contenido, y así poder regalar contenido de valor a tus
 días...<br>
-          <br> Gracias por leerme
-        </h2>
+          <br> Gracias por leerme.
+        </p>
       </div>
     </section>
     
