--- a/Contacto.html
+++ b/Contacto.html
@@ -37,9 +37,9 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-custom-font u-nav u-spacing-30 u-text-font u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-border-3 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90" href="Terapeuta-cerca-de-mi.html" style="padding: 10px 0px;">Terapeuta cerca de mi</a>
-</li><li class="u-nav-item"><a class="u-border-3 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90" href="Terapia-de-pareja-near-me.html" style="padding: 10px 0px;">Terapia de pareja near me</a>
-</li><li class="u-nav-item"><a class="u-border-3 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90" href="Acerca-de-mí.html" style="padding: 10px 0px;">Más de la sexóloga</a>
+            <ul class="u-custom-font u-nav u-spacing-30 u-text-font u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-border-3 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90" href="Terapeuta-cerca-de-mi.html" style="padding: 10px 0px;">Terapia Online</a>
+</li><li class="u-nav-item"><a class="u-border-3 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90" href="Terapia-de-pareja-near-me.html" style="padding: 10px 0px;">Terapia individual y de pareja</a>
+</li><li class="u-nav-item"><a class="u-border-3 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90" href="Acerca-de-mí.html" style="padding: 10px 0px;">Acerca de mí</a>
 </li><li class="u-nav-item"><a class="u-border-3 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90" href="Contacto.html" style="padding: 10px 0px;">Contacto</a>
 </li></ul>
           </div>
@@ -47,9 +47,9 @@
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Terapeuta-cerca-de-mi.html">Terapeuta cerca de mi</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Terapia-de-pareja-near-me.html">Terapia de pareja near me</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Acerca-de-mí.html">Más de la sexóloga</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Terapeuta-cerca-de-mi.html">Terapia Online</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Terapia-de-pareja-near-me.html">Terapia individual y de pareja</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Acerca-de-mí.html">Acerca de mí</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contacto.html">Contacto</a>
 </li></ul>
               </div>
@@ -60,12 +60,14 @@
       </div></header>
     <section class="u-align-center u-clearfix u-container-align-center u-section-1" id="sec-1dca">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
+        <div class="data-layout-selected u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
               <div class="u-align-left u-container-style u-layout-cell u-size-30 u-layout-cell-1">
                 <div class="u-container-layout u-container-layout-1">
-                  <h2 class="u-align-center u-custom-font u-font-montserrat u-text u-text-1"> ¡Felicitaciones por dar el primer paso para mejorar tu relación!&nbsp;</h2>
+                  <p class="u-align-center u-text u-text-1"> "La ausencia de límites claros puedes estar generando conflictos constantes e
+innecesarios en tu vida de pareja."<br>Pero no te preocupes: hay una solución.
+                  </p>
                   <img class="u-image u-image-default u-image-1" src="images/foto_kari.jpg" alt="" data-image-width="271" data-image-height="398">
                 </div>
               </div>
@@ -73,10 +75,10 @@
                 <div class="u-container-layout u-container-layout-2">
                   <h1 class="u-align-center u-text u-text-2">Whatsapp Sexóloga en linea<br>
                   </h1>
-                  <h2 class="u-align-center u-text u-text-3"> ¡Tu relación y tu bienestar emocional son mi prioridad! Contáctame para obtener más información sobre cómo puedo ayudarte a ti y a tu pareja a alcanzar una relación más saludable y feliz.</h2>
-                  <p class="u-align-center u-custom-font u-font-montserrat u-text u-text-4">+ 57 313 2518966</p><span class="infinite u-align-center u-file-icon u-icon u-icon-circle u-palette-1-base u-icon-1" data-href="https://wa.link/j79tjn" data-target="_blank" data-animation-name="pulse" data-animation-duration="750" data-animation-direction=""><img src="images/5968841.png" alt=""></span>
+                  <p class="u-align-center u-text u-text-3"> ¡Tu relación y tu bienestar emocional son mi prioridad! Contáctame para obtener más información sobre cómo puedo ayudarte a ti y a tu pareja a alcanzar una relación más saludable y feliz.</p>
+                  <p class="u-align-center u-custom-font u-font-montserrat u-text u-text-4">+ 57 313 2518966</p><span class="infinite u-align-center u-border-2 u-border-custom-color-19 u-file-icon u-icon u-icon-circle u-icon-1" data-href="https://wa.link/j79tjn" data-target="_blank" data-animation-name="pulse" data-animation-duration="750" data-animation-direction=""><img src="images/5968841.png" alt=""></span>
                   <h4 class="u-align-center u-custom-font u-font-montserrat u-text u-text-default u-text-5"></h4><span class="u-align-center u-file-icon u-icon u-text-palette-1-base u-icon-2"><img src="/1caf7b1d3d5f4e/ce131fa2-9b26-4c33-a9f7-aff3357242a7-bee51007.png" alt=""></span>
-                  <h2 class="u-align-center u-text u-text-6"> &nbsp; ​¡Gracias por considerar mi
+                  <p class="u-align-center u-text u-text-6"> &nbsp; ​¡Gracias por considerar mi
 terapia de pareja en línea para mejorar tu relación! Como sexóloga y terapeuta
 matrimonial en línea, estoy aquí para ayudarte a superar los desafíos en tu
 relación y fortalecer la conexión emocional con tu pareja.&nbsp;<br>
@@ -87,7 +89,7 @@ mejorar la comunicación asertiva y fomentar la fijación de límites claros.<br
 una excelente opción para aquellas parejas que prefieren la comodidad de la
 terapia online. Si estás listo para mejorar tu relación con tu pareja,
 contáctame para obtener más información sobre cómo puedo ayudarte.​&nbsp; 
-                  </h2>
+                  </p>
                 </div>
               </div>
             </div>
@@ -95,7 +97,7 @@ contáctame para obtener más información sobre cómo puedo ayudarte.​&nbsp;
         </div>
       </div>
     </section>
-    <section class="u-align-center u-clearfix u-custom-color-3 u-section-2" id="sec-fb66">
+    <section class="u-align-center u-clearfix u-custom-color-19 u-section-2" id="sec-fb66">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-text u-text-default u-text-1">Siguenos</h2>
         <div class="u-align-center u-social-icons u-spacing-10 u-social-icons-1">
