--- a/Terapia-de-pareja-near-me.html
+++ b/Terapia-de-pareja-near-me.html
@@ -55,9 +55,9 @@ Docente ., ​Cuéntanos tu inquietud.">
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-custom-font u-nav u-spacing-30 u-text-font u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-border-3 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90" href="Terapeuta-cerca-de-mi.html" style="padding: 10px 0px;">Terapeuta cerca de mi</a>
-</li><li class="u-nav-item"><a class="u-border-3 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90" href="Terapia-de-pareja-near-me.html" style="padding: 10px 0px;">Terapia de pareja near me</a>
-</li><li class="u-nav-item"><a class="u-border-3 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90" href="Acerca-de-mí.html" style="padding: 10px 0px;">Más de la sexóloga</a>
+            <ul class="u-custom-font u-nav u-spacing-30 u-text-font u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-border-3 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90" href="Terapeuta-cerca-de-mi.html" style="padding: 10px 0px;">Terapia Online</a>
+</li><li class="u-nav-item"><a class="u-border-3 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90" href="Terapia-de-pareja-near-me.html" style="padding: 10px 0px;">Terapia individual y de pareja</a>
+</li><li class="u-nav-item"><a class="u-border-3 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90" href="Acerca-de-mí.html" style="padding: 10px 0px;">Acerca de mí</a>
 </li><li class="u-nav-item"><a class="u-border-3 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90" href="Contacto.html" style="padding: 10px 0px;">Contacto</a>
 </li></ul>
           </div>
@@ -65,9 +65,9 @@ Docente ., ​Cuéntanos tu inquietud.">
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Terapeuta-cerca-de-mi.html">Terapeuta cerca de mi</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Terapia-de-pareja-near-me.html">Terapia de pareja near me</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Acerca-de-mí.html">Más de la sexóloga</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Terapeuta-cerca-de-mi.html">Terapia Online</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Terapia-de-pareja-near-me.html">Terapia individual y de pareja</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Acerca-de-mí.html">Acerca de mí</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contacto.html">Contacto</a>
 </li></ul>
               </div>
@@ -78,22 +78,54 @@ Docente ., ​Cuéntanos tu inquietud.">
       </div></header>
     <section class="u-align-left u-clearfix u-image u-shading u-section-1" id="carousel_b404" data-image-width="1620" data-image-height="1080">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-1" data-animation-name="slideIn" data-animation-duration="2000" data-animation-direction="Left">
-          <br> Terapia Online con 
-la Sexóloga Karilyn Talavera.
-        </h1>
-        <h2 class="u-text u-text-2">Especialista en Asesoría Clínica de
-parejas con una experiencia de más de 10 años ayudando a las parejas a
-establecer puntos comunes para potenciar la relación a través del entendimiento
-mutuo y la fijación de límites claros no negociables.</h2>
-        <a href="https://wa.link/yxlj9s" class="infinite u-align-center u-btn u-btn-round u-button-style u-custom-color-5 u-radius-45 u-btn-1" target="_blank" data-animation-name="pulse" data-animation-duration="750" data-animation-direction="" data-animation-delay="0">!Escribenos tu consulta!</a>
-        <a href="https://chat.whatsapp.com/D4EaZ8vERhdDtgUaulMpCo" class="infinite u-align-center u-border-none u-btn u-btn-round u-button-style u-palette-3-light-1 u-radius-45 u-btn-2" target="_blank" data-animation-name="pulse" data-animation-duration="750" data-animation-direction="" data-animation-delay="0">!Únete al Grupo de Whatsapp!</a>
-        <p class="u-text u-text-3">Copia de Site37_sexologak_Mayo2024</p>
+        <div class="data-layout-selected u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
+          <div class="u-layout">
+            <div class="u-layout-col">
+              <div class="u-size-20">
+                <div class="u-layout-row">
+                  <div class="u-container-style u-layout-cell u-size-60 u-layout-cell-1">
+                    <div class="u-container-layout u-valign-top u-container-layout-1">
+                      <h1 class="u-align-center u-text u-text-default u-text-1"> Terapia Online&nbsp;<br>con la Sexóloga Karilyn Talavera. 
+                      </h1>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="u-size-20">
+                <div class="u-layout-row">
+                  <div class="u-align-left u-container-style u-layout-cell u-size-60 u-layout-cell-2">
+                    <div class="u-container-layout u-container-layout-2">
+                      <h2 class="u-align-center u-text u-text-white u-text-2"> Especialista en Asesoría Clínica de parejas con una experiencia de más de 10 años ayudando a las parejas a establecer puntos comunes para potenciar la relación a través del entendimiento mutuo y la fijación de límites claros no negociables.&nbsp;<br>
+                      </h2>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="u-size-20">
+                <div class="u-layout-row">
+                  <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-3">
+                    <div class="u-container-layout u-container-layout-3">
+                      <a href="https://chat.whatsapp.com/D4EaZ8vERhdDtgUaulMpCo" class="infinite u-align-center u-border-none u-btn u-btn-round u-button-style u-palette-3-light-1 u-radius-45 u-btn-1" target="_blank" data-animation-name="pulse" data-animation-duration="750" data-animation-direction="" data-animation-delay="0">¡Únete al Grupo de&nbsp;<br>Whatsapp!
+                      </a>
+                    </div>
+                  </div>
+                  <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-4">
+                    <div class="u-container-layout u-container-layout-4">
+                      <a href="https://wa.link/yxlj9s" class="infinite u-align-center u-btn u-btn-round u-button-style u-custom-color-5 u-radius u-btn-2" target="_blank" data-animation-name="pulse" data-animation-duration="750" data-animation-direction="" data-animation-delay="0"> ¡Escribenos&nbsp;<br>tu consulta!
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
-    <section class="u-clearfix u-custom-color-4 u-section-2" id="sec-75a6">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <h2 class="u-align-center u-text u-text-1"> &nbsp; &nbsp; ¡Impacta tu relación positivamente fijando límites claros de manera consciente!</h2>
+    <section class="u-clearfix u-custom-color-17 u-section-2" id="sec-75a6">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <h2 class="u-align-center u-text u-text-1">Terapia de pareja en español.<br>Ahora más cerca de ti.
+        </h2>
       </div>
     </section>
     <section class="u-align-center u-clearfix u-custom-color-4 u-section-3" id="carousel_ff80">
@@ -111,12 +143,12 @@ mutuo y la fijación de límites claros no negociables.</h2>
     </section>
     <section class="u-align-left u-clearfix u-custom-color-4 u-section-4" id="sec-dd8c">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-align-center u-text u-text-1"> ¿Buscando Sexóloga Online más cerca de ti?&nbsp;<span class="u-text-custom-color-4" style="font-size: 1rem;">
+        <h2 class="u-align-center u-text u-text-1"> ¿Buscando Sexóloga Online más cerca de ti?&nbsp;<span class="u-text-custom-color-4" style="font-size: 1rem;">
             <br>
             <br>
           </span>
-        </h1>
-        <h2 class="u-align-center u-text u-text-2">
+        </h2>
+        <p class="u-align-center u-text u-text-2">
           <span style="font-weight: 700;">¡Llegaste al lugar indicado!</span>&nbsp;<br>
           <br>Como sexóloga y como terapista de
 pareja me especializo en terapia individual y en terapia de pareja según sea la necesidad de cada caso.<br>
@@ -130,12 +162,12 @@ comportamiento y comunicación poco saludables que puedan estar afectando su
 relación. Trabajamos juntos para encontrar soluciones personalizadas efectivas
 y constructivas para mejorar la comunicación, construir la confianza y
 fortalecer el vínculo emocional.&nbsp; &nbsp;&nbsp;<br>
-        </h2>
+        </p>
       </div>
     </section>
     <section class="u-clearfix u-custom-color-4 u-section-5" id="sec-ca16" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h2 class="u-align-center u-text u-text-default u-text-1"> ¡Observa algunas de las herramientas usadas en&nbsp;<br>la terapia online individual y de pareja!&nbsp;<br>
+        <h2 class="u-align-center u-text u-text-1"> ¡Observa algunas de las herramientas usadas en&nbsp;<br>la terapia online individual y de pareja!&nbsp;<br>
         </h2>
       </div>
     </section>
@@ -182,9 +214,9 @@ crisis, terapia para controlar los celos.</p>
     </section>
     <section class="u-clearfix u-custom-color-4 u-section-7" id="sec-720d">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h2 class="u-align-center u-text u-text-1"> Potenciamos tu relación con herramientas tan sutiles pero tan conscientes
+        <h3 class="u-align-center u-text u-text-1"> Potenciamos tu relación con herramientas tan sutiles pero tan conscientes
 como esta:&nbsp;<br>
-        </h2>
+        </h3>
       </div>
     </section>
     <section class="u-clearfix u-container-align-center-lg u-container-align-center-md u-container-align-center-sm u-container-align-center-xs u-custom-color-4 u-section-8" id="sec-cf68">
@@ -200,7 +232,7 @@ como esta:&nbsp;<br>
       </div>
     </section>
     <section class="u-clearfix u-custom-color-4 u-section-9" id="carousel_da15">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-align-center u-text u-text-1"> ¿Te sientes
 incomprendido/a y con miedo a expresar tus opiniones en tu relación de pareja?
 El próximo video puede ayudarte a superar este obstáculo y mejorar tu relación.<br>
@@ -221,7 +253,7 @@ El próximo video puede ayudarte a superar este obstáculo y mejorar tu relació
         </div>
       </div>
     </section>
-    <section class="u-align-center u-clearfix u-container-align-center u-custom-color-4 u-section-11" id="carousel_5e29">
+    <section class="u-align-center u-clearfix u-container-align-center u-custom-color-18 u-section-11" id="carousel_5e29">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-align-center u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="750">Principales causas de consulta.<br>¿Te identificas con alguna de ellas?
         </h2>
@@ -293,12 +325,12 @@ continuación.
       </div>
     </section>
     <section class="u-clearfix u-custom-color-4 u-section-13" id="carousel_0124">
-      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-sheet-1">
-        <h2 class="u-align-justify u-text u-text-default u-text-1"> La terapia individual
-y terapia de pareja, ayuda a abordar temas como:&nbsp;</h2>
+      <div class="u-clearfix u-sheet u-valign-middle-xl u-sheet-1">
+        <p class="u-align-justify u-text u-text-default-xl u-text-1"> La terapia individual
+y terapia de pareja, ayuda a abordar temas como:&nbsp;</p>
         <ol class="u-align-justify u-spacing-8 u-text u-text-default u-text-2">
           <li style="padding-left: 0px;">
-            <span style="font-weight: 700;">Abordar problemas sexuales:</span> la terapia de pareja puede ayudar a identificar y resolver problemas relacionados con la intimidad y la sexualidad.
+            <span style="font-weight: 700;">Abordar problemas sexuales:</span> la terapia de pareja puede ayudar a identificar y r​esolver problemas relacionados con la intimidad y la sexualidad.
           </li>
           <li style="padding-left: 0px;">
             <span style="font-weight: 700;">Mejorar la comunicación sexual:</span> la terapia de pareja puede ayudar a mejorar la comunicación sexual, lo que puede conducir a una mayor intimidad y satisfacción.
@@ -314,51 +346,45 @@ y terapia de pareja, ayuda a abordar temas como:&nbsp;</h2>
       </div>
     </section>
     <section class="u-clearfix u-custom-color-4 u-section-14" id="carousel_5aaa">
-      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-sheet-1">
-        <h3 class="u-align-center u-text u-text-default u-text-1">
-          <span style="font-weight: 700;">
-            <span style="text-decoration: underline !important;">La importancia de reconocer y
-enfrentar los problemas en la relación de pareja.&nbsp; &nbsp;</span>
-            <br>
-            <br>
-            <span style="font-weight: 400;"> Cuando se trata de resolver problemas en la
-relación, reconocer que hay un problema es fundamental.&nbsp;</span>
-          </span>Es importante entender
-que evadir el problema no es ser un adulto responsable, sino que enfrentar los
-conflictos y buscar ayuda es lo que nos hace crecer y madurar.&nbsp;Al aceptar que
-hay un problema y buscar ayuda, puedes mejorar la comunicación con tu pareja,
-fomentar el respeto mutuo y establecer límites claros y saludables en tu
-relación.<br>
-          <br>Postergar la solución
-a un problema en la relación de pareja puede generar consecuencias graves,
-tanto emocionales como económicas. Es común que las parejas eviten buscar ayuda
-profesional por el costo de las sesiones, pero enfrentar la situación a tiempo
-es mucho más económico que dejar que el problema se agrave y afecte otros
-aspectos de la vida. La terapia de pareja puede ayudar a resolver el problema
-antes de que sea demasiado tarde.&nbsp;<br>
-          <br>
-          <span style="font-weight: 700;">Recuerda:&nbsp;</span>
-          <br>
-          <span style="font-weight: 700;">"Si Postergas la acción,&nbsp;</span>
-          <br>
-          <span style="font-weight: 700;">Postergas el resultado".&nbsp;</span>
-          <br>
-          <br>Si sientes que tu relación necesita un impulso en la
-dirección correcta, ¡estoy aquí para ayudarte!<br>
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <h3 class="u-align-center u-text u-text-default u-text-1"><b>La
+importancia de reconocer y enfrentar los problemas en la relación de
+pareja.&nbsp; &nbsp;<br><!--[if !supportLineBreakNewLine]-->
+            <br><!--[endif]--></b>
         </h3>
+        <p class="u-align-justify u-text u-text-default u-text-2"> Cuando se trata de resolver problemas en la relación,
+reconocer que hay un problema es fundamental.&nbsp;Es importante entender que
+evadir el problema no es ser un adulto responsable, sino que enfrentar los
+conflictos y buscar ayuda es lo que nos hace crecer y madurar.&nbsp;Al aceptar
+que hay un problema y buscar ayuda, puedes mejorar la comunicación con tu
+pareja, fomentar el respeto mutuo y establecer límites claros y saludables en
+tu relación.<br>
+          <br> Postergar la solución a un problema en la relación de pareja puede generar
+consecuencias graves, tanto emocionales como económicas. Es común que las
+parejas eviten buscar ayuda profesional por el costo de las sesiones, pero
+enfrentar la situación a tiempo es mucho más económico que dejar que el
+problema se agrave y afecte otros aspectos de la vida. La terapia de pareja
+puede ayudar a resolver el problema antes de que sea demasiado tarde.&nbsp;<br>
+          <br><b>Recuerda:&nbsp;</b>
+          <br><b>"Si Postergas la acción,&nbsp;</b>
+          <br><b>Postergas el resultado".&nbsp;</b>
+          <br>
+          <br> Si sientes que tu relación necesita un impulso en la dirección correcta, ¡estoy
+aquí para ayudarte!
+        </p>
         <a href="https://wa.link/yxlj9s" class="infinite u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-color-5 u-radius-45 u-btn-1" target="_blank" data-animation-name="pulse" data-animation-duration="750" data-animation-direction="" data-animation-delay="0"> ¡Quiero ese impulso Ahora! </a>
       </div>
     </section>
     <section class="u-clearfix u-container-align-center u-custom-color-4 u-section-15" id="carousel_e3d6">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
+        <div class="data-layout-selected u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
               <div class="u-container-align-center u-container-style u-image u-layout-cell u-size-17 u-image-1" data-image-width="1000" data-image-height="1500">
                 <div class="u-container-layout u-valign-middle u-container-layout-1"></div>
               </div>
-              <div class="u-align-center-md u-align-center-sm u-align-center-xs u-container-align-center u-container-style u-custom-color-5 u-layout-cell u-size-23 u-layout-cell-2">
-                <div class="u-container-layout u-valign-middle u-container-layout-2">
+              <div class="u-align-center-md u-align-center-sm u-align-center-xs u-container-style u-custom-color-5 u-layout-cell u-size-23 u-layout-cell-2">
+                <div class="u-container-layout u-container-layout-2">
                   <h2 class="u-align-center u-custom-font u-font-montserrat u-text u-text-default u-text-1"> Cuéntanos tu inquietud.</h2>
                 </div>
               </div>
