Error en formulario1..
se copio el 2 al 1

--- a/Terapeuta-cerca-de-mi.html
+++ b/Terapeuta-cerca-de-mi.html
@@ -224,7 +224,7 @@ ti misma y de tus relaciones en tan solo una semana.
       </div>
     </section>
     <section class="u-clearfix u-section-4" id="sec-77a5">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <div class="data-layout-selected u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
@@ -399,7 +399,7 @@ tu vida y tus relaciones.
           <div class="u-layout">
             <div class="u-layout-row">
               <div class="u-black u-container-align-center u-container-style u-layout-cell u-shape-rectangle u-size-60 u-layout-cell-1">
-                <div class="u-container-layout u-valign-bottom u-container-layout-1">
+                <div class="u-container-layout u-container-layout-1">
                   <p class="u-align-center u-text u-text-custom-color-2 u-text-default u-text-1">Para ver si esto puede ser buena inversión: </p>
                   <p class="u-align-center u-text u-text-default u-text-2"><b>«8 ideas efectivas para identificar que está
 pasando en mi relación individual y de pareja»&nbsp;</b>
