Blog creado y agregado
Mis primeros 2 articulos

--- a/Acerca-de-mí.html
+++ b/Acerca-de-mí.html
@@ -58,6 +58,7 @@ Gracias por leerme">
 </li><li class="u-nav-item"><a class="u-border-3 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90" href="Terapia-de-pareja-near-me.html" style="padding: 10px 0px;">Terapia individual y de pareja</a>
 </li><li class="u-nav-item"><a class="u-border-3 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90" href="Acerca-de-mí.html" style="padding: 10px 0px;">Acerca de mí</a>
 </li><li class="u-nav-item"><a class="u-border-3 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90" href="Contacto.html" style="padding: 10px 0px;">Contacto</a>
+</li><li class="u-nav-item"><a class="u-border-3 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90" href="blog/blog.html" style="padding: 10px 0px;">Blog</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -68,6 +69,7 @@ Gracias por leerme">
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Terapia-de-pareja-near-me.html">Terapia individual y de pareja</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Acerca-de-mí.html">Acerca de mí</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contacto.html">Contacto</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="blog/blog.html">Blog</a>
 </li></ul>
               </div>
             </div>
